--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -1,5 +1,5 @@
 {
-  "welcome_to_tc": "Welcome to ${app} Joel!",
+  "welcome_to_tc": "Welcome to ${app} Joel L!",
   "get_started": "Get Started!",
   "version": "Version ${version}",
   "instructions": "Instructions",
