--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -1,6 +1,6 @@
 {
   "welcome_to_tc": "Welcome to ${app} Joel L!",
-  "get_started": "Get Started!",
+  "get_started": "Get Started Joel!",
   "version": "Version ${version}",
   "instructions": "Instructions",
   "access_internet": "Access Internet",
