--- a/src/locale/Marathi-mr_IN.json
+++ b/src/locale/Marathi-mr_IN.json
@@ -146,7 +146,7 @@
     "import_local_project": "Import Local Project",
     "import_online_project": "Import Online Project",
     "searching_alert": "Searching, please wait...",
-    "books_available": "In this version of ${app}, the translationWords tool supports projects from the New Testament and the Word Alignment tool supports projects from the whole Bible.",
+    "books_available": "In this version of ${app}, the translationWords tool and the Word Alignment tool support New Testament projects.",
     "enter_url": "Enter URL",
     "or": "Or",
     "language_code": "Language Code",
