WIP Tool card functional except localization

--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -406,5 +406,46 @@
     "do_not_rename": "Do Not Rename",
     "contact_helpdesk": "Contact Helpdesk",
     "retry": "Retry"
+  },
+  "tool_card_categories": {
+    "kt":       "Key Terms",
+    "names":    "Names",
+    "other":    "Other Terms",
+    "lexical": "Lexical",
+      "translate_bweight": "Measures and Weights",
+      "translate_numbers": "Numbers",
+      "translate_fraction": "Fractions",
+      "translate_ordinal": "Ordinal Numbers",
+    "figures": "Figures of Speech",
+      "figs_idiom": "Idiom",
+      "figs_irony": "Irony",
+      "figs_metaphor": "Metaphor",
+      "figs_rquestions": "Rhetorical Questions",
+      "figs_simile": "Simile",
+      "figs_apostrophe": "Apostrophe",
+      "figs_euphemism": "Euphemism",
+      "figs_hendiadys": "Hendiadys",
+      "figs_hyperbole": "Hyperbole",
+      "figs_litotes": "litotes",
+      "figs_merism": "Merism",
+      "figs_metonymy": "Metonymy",
+      "figs_parallelism": "Parallelism",
+      "figs_personification": "Personification",
+      "figs_synecdoche": "Synecdoche",
+      "figs_ellipsis": "Ellipsis",
+      "figs_doublenegatives": "Double negatives",
+    "cultural": "Cultural",
+      "translate_symaction": "Symbolic Actions",
+      "writing_symlanguage": "Symbolic Language",
+      "translate_unknown": "Unknowns",
+      "figs_explicit": "Implicit and Explicit Information",
+    "morphological": "Morphological",
+      "figs_you": "Forms of You",
+      "figs_we": "Forms of We",
+      "figs_they": "Forms of They",
+      "figs_activepassive": "Active or Passive",
+      "figs_gendernotations": "Gender",
+      "figs_pronouns": "Pronouns",
+      "writing_connectingwords": "Connecting Words"
   }
 }
