--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -365,7 +365,8 @@
     "menu": "Menu",
     "no_gl_available": "None available",
     "invalid_checks": "Invalidated checks",
-    "invalid_verse_alignments": "Verses with invalidated alignments."
+    "invalid_verse_alignments": "Verses with invalidated alignments.",
+    "validating_word_alignments": "Validating Word Alignments"
   },
   "buttons": {
     "back_button": "Go Back",
