--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -366,7 +366,7 @@
     "no_gl_available": "None available",
     "invalid_checks": "Invalidated checks",
     "invalid_verse_alignments": "Verses with invalidated alignments.",
-    "validating_word_alignments": "Validating Word Alignments"
+    "invalidation_checking": "Doing Invalidation Checking"
   },
   "buttons": {
     "back_button": "Go Back",
