--- a/src/locale/Hindi-hi_IN.json
+++ b/src/locale/Hindi-hi_IN.json
@@ -365,7 +365,8 @@
     "menu": "मेन्यू",
     "no_gl_available": "उपलब्ध नहीं",
     "invalid_checks": "अवैध चेक",
-    "invalid_verse_alignments": "छंद के साथ अवैध संरेखण है ।"
+    "invalid_verse_alignments": "छंद के साथ अवैध संरेखण है ।",
+    "invalidation_checking": "कर रद्द की जाँच"
   },
   "buttons": {
     "back_button": "वापस जाओ",
