--- a/src/locale/Spanish-es_ES.json
+++ b/src/locale/Spanish-es_ES.json
@@ -366,7 +366,7 @@
     "no_gl_available": "Ninguno disponible",
     "invalid_checks": "Revisiones invalidadas",
     "invalid_verse_alignments": "Versículos con alineaciones invalidadas.",
-    "invalidation_checking": "Haciendo Invalidación De Cheques"
+    "invalidation_checking": "Haciendo Chequeos de Invalidación"
   },
   "buttons": {
     "back_button": "Volver",
