--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -366,7 +366,9 @@
     "no_gl_available": "None available",
     "invalid_checks": "Invalidated checks",
     "invalid_verse_alignments": "Verses with invalidated alignments.",
-    "invalidation_checking": "Doing Invalidation Checking"
+    "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+    "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
+    "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu."
   },
   "buttons": {
     "back_button": "Go Back",
