--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -238,7 +238,8 @@
       "field_invalid_length": "Must be 3-4 letters long",
       "invalid_characters": "Only basic Latin Letters supported"
     },
-    "conflicting_project": "A project with this identifier already exists for this language and book"
+    "conflicting_project": "A project with this identifier already exists for this language and book",
+    "newer_project": "This project was created in a newer version of translationCore. Please update to the latest version and try again."
   },
   "book_list": {
     "ot": {
@@ -406,6 +407,7 @@
     "rename_local": "Rename Local Project",
     "do_not_rename": "Do Not Rename",
     "contact_helpdesk": "Contact Helpdesk",
-    "retry": "Retry"
+    "retry": "Retry",
+    "update": "Update to latest version"
   }
 }
