--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -428,11 +428,11 @@
     "figs-metaphor": "Metaphor",
     "figs-rquestion": "Rhetorical Question",
     "figs-simile": "Simile",
-    "figs-apostrophe": "apostrophe",
+    "figs-apostrophe": "Apostrophe",
     "figs-euphemism": "Euphemism",
     "figs-hendiadys": "Hendiadys",
     "figs-hyperbole": "Hyperbole",
-    "figs-litotes": "litotes",
+    "figs-litotes": "Litotes",
     "figs-merism": "Merism",
     "figs-metonymy": "Metonymy",
     "figs-parallelism": "Parallelism",
