--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -64,6 +64,7 @@
   "include_app_logs": "Include application logs",
   "alignment_prompt": "Would you like to export the alignment data with your text?",
   "include_alignment_check": "Include alignment data",
+  "loading_verse_edits": "Loading Verse Edits",
   "updates": {
     "check_for_newer_app": "Check for software updates",
     "check_for_content_updates": "Check for content updates",
