--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -316,8 +316,7 @@
     }
   },
   "tools": {
-    "click_the_launch_button": "Now you can click the Launch button to open the tool.",
-    "resource_missing_for_tool": "The current project and tool selected require an older version of the ${resourceId}. Please click the Download button to download the version of the ${resourceId} that is required by this project and tool combination.",
+    "resource_missing_for_tool": "The current tool requires a different version of the UGNT. Please click Download to retrieve this resource.",
     "no_checks_selected": "You must select a category to launch this tool",
     "book_not_supported": "Book not supported",
     "select_tool_from_list": "Select a tool and a gateway language from the list.",
