changed promptForInvalidCheckFeedback to add capability to go to next check. Updated prompt

--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -376,7 +376,7 @@
     "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
     "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
     "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-    "invalid_check": "There is a problem with the content for this check: ${report} Do you want to report it?"
+    "invalid_check_found": "There is a problem with the content for this check: ${report} Do you want to report this problem so it can be fixed?"
   },
   "buttons": {
     "back_button": "Go Back",
@@ -418,7 +418,8 @@
     "contact_helpdesk": "Contact Helpdesk",
     "retry": "Retry",
     "update": "Update to latest version",
-    "ignore_button": "Ignore"
+    "ignore_button": "Ignore",
+    "feedback_button": "Send Feedback"
   },
   "tool_card_categories": {
     "kt": "Key Terms",
