--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -65,6 +65,7 @@
   "alignment_prompt": "Would you like to export the alignment data with your text?",
   "include_alignment_check": "Include alignment data",
   "loading_verse_edits": "Loading Verse Edits",
+  "sending_feedback": "Sending Feedback",
   "updates": {
     "check_for_newer_app": "Check for software updates",
     "check_for_content_updates": "Check for content updates",
