--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -71,6 +71,7 @@
   "third_party_attributions": "Third Party Code Additional Copyright Notices and License Terms",
   "sending_feedback": "Sending Feedback",
   "sending_feedback_failed": "Failed to Send Feedback",
+  "critical_error_warning": "Warning: A critical error has occurred!",
   "updates": {
     "check_for_newer_app": "Check for software updates",
     "check_for_content_updates": "Check for content updates",
@@ -385,6 +386,7 @@
     "invalid_check_found": "There is a problem with the content for this check: ${report} Do you want to report this problem so it can be fixed?"
   },
   "buttons": {
+    "return_home_button": "Return to home",
     "back_button": "Go Back",
     "cancel_button": "Cancel",
     "cancel_import_button": "Cancel Import",
