--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -386,7 +386,7 @@
     "invalid_check_found": "There is a problem with the content for this check: ${report} Do you want to report this problem so it can be fixed?"
   },
   "buttons": {
-    "return_home_button": "Return to home",
+    "return_home_button": "Return Home",
     "back_button": "Go Back",
     "cancel_button": "Cancel",
     "cancel_import_button": "Cancel Import",
