New Crowdin translations (#6333)
* New translations English-en_US.json (Assamese)
[ci skip]

* New translations English-en_US.json (Portuguese, Brazilian)
[ci skip]

* New translations English-en_US.json (Urdu-Devanagari)
[ci skip]

* New translations English-en_US.json (Telugu)
[ci skip]

* New translations English-en_US.json (Tamil)
[ci skip]

* New translations English-en_US.json (Spanish)
[ci skip]

* New translations English-en_US.json (Russian)
[ci skip]

* New translations English-en_US.json (Punjabi)
[ci skip]

* New translations English-en_US.json (Oriya)
[ci skip]

* New translations English-en_US.json (Bengali, India)
[ci skip]

* New translations English-en_US.json (Nepali)
[ci skip]

* New translations English-en_US.json (Marathi)
[ci skip]

* New translations English-en_US.json (Malayalam)
[ci skip]

* New translations English-en_US.json (Kannada)
[ci skip]

* New translations English-en_US.json (Hindi)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Naga Pidgin)
[ci skip]

* New translations English-en_US.json (Hindi)
[ci skip]

* New translations English-en_US.json (Marathi)
[ci skip]

--- a/src/locale/Marathi-mr_IN.json
+++ b/src/locale/Marathi-mr_IN.json
@@ -339,6 +339,7 @@
     "description": "वर्णन",
     "tw_part1_description": "स्पष्ट, संक्षिप्त परिभाषांचा संच आणि अनुवादासाठीच्या सूचनांचा समावेश करून पवित्र शास्त्रामधील महत्त्वाच्या शब्दाचा अर्थ व्यापकपणे तपासण्याचे एक साधन.",
     "gateway_language": "गेटवे भाषा",
+    "select_gateway_language": "निवडा गेटवे भाषा",
     "word_alignment": "शब्द संरेखन",
     "alignment_description": "भाषांतर मूळ पवित्र शास्त्रासंबंधी भाषांमध्ये संरेखित करण्याचे एक साधन जे मूळ भाषेमध्ये प्रतिनिधित्व केलेला अर्थ कसे संप्रेषित करते हे दर्शविण्यासाठी. हा डेटा लक्ष्य भाषेतील अनुक्रम आणि ओळींच्या मध्ये लिहिलेला मजकूर पवित्र शास्त्रासारखी इतर संसाधने तयार करण्यात उपयुक्त ठरू शकतो.",
     "please_select_gl": "कृपया गेटवे भाषा निवडा ज्यामधून आपणास आपले भाषांतर तपासण्यास आवडेल.",
