--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -66,7 +66,7 @@
   "alignment_prompt": "Would you like to export the alignment data with your text?",
   "include_alignment_check": "Include alignment data",
   "loading_verse_edits": "Loading Verse Edits",
-  "find_out_more": "Find out more about ${app_name} at:",
+  "find_out_more": "Find out more about ${app} at:",
   "based_on_earlier_work": "Based on an earlier work by ${wycliffe_associates} released under the ISC",
   "third_party_attributions": "Third Party Code Additional Copyright Notices and License Terms",
   "sending_feedback": "Sending Feedback",
