--- a/src/locale/Gujarati-gu_IN.json
+++ b/src/locale/Gujarati-gu_IN.json
@@ -7,6 +7,7 @@
   "to_get_started": "To get started, please:",
   "log_in": "Log in",
   "save_changes": "Save Changes",
+  "saving_changes": "Saving Changes",
   "success": "Success",
   "supported_file_types": "Supported File Types",
   "select_project": "Select a Project",
