New Crowdin translations (#6410)
* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Kannada)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

* New translations English-en_US.json (Gujarati)
[ci skip]

--- a/src/locale/Gujarati-gu_IN.json
+++ b/src/locale/Gujarati-gu_IN.json
@@ -1,88 +1,88 @@
 {
   "welcome_to_tc": "${app} માં આપનું સ્વાગત છે!",
-  "get_started": "Get Started!",
-  "version": "Version ${version}",
-  "instructions": "Instructions",
-  "access_internet": "Access Internet",
-  "to_get_started": "To get started, please:",
-  "log_in": "Log in",
-  "save_changes": "Save Changes",
-  "saving_changes": "Saving Changes",
-  "success": "Success",
-  "supported_file_types": "Supported File Types",
-  "select_project": "Select a Project",
-  "select_tool": "Select a Tool",
-  "select_all": "Select all",
-  "unselect_all": "Unselect all",
-  "launch": "Launch",
-  "current_user": "Current User",
-  "please_log_in": "Please log in to continue",
-  "login_required": "You must be logged in to use ${app}.",
-  "only_english": "Only English is currently supported",
-  "change_locale": "Change Locale",
-  "app_language": "Application Language",
-  "current_project": "Current Project",
-  "change_project": "Change Project",
-  "current_tool": "Current Tool",
-  "change_tool": "Change Tool",
-  "currently_logged_in": "You are currently logged in.",
-  "to_continue_to_projects": "To continue to Projects, click \"Continue to Project\".",
-  "home": "Home",
-  "required": "Required",
-  "required_field": "This field is required",
-  "license": "License",
-  "licenses": "Licenses",
-  "user": "User",
-  "project": "Project",
-  "tool": "Tool",
-  "error": "Error",
-  "copyright": "Copyright",
-  "copyright_check": "Copyright Check",
-  "project_information": "Project Information",
-  "missing_verses": "Missing Verses",
-  "dev_mode_disabled": "Developer Mode Disabled",
-  "dev_mode_enabled": "Developer Mode Enabled. No technical support is provided for ${app} in developer mode!",
-  "no_internet": "Unable to connect to the server. Please check your Internet connection.",
-  "alert": "Alert",
-  "using_internet": "You are about to transmit data over the Internet. Are you sure you want to do that?",
-  "do_not_show_again": "Do not show this warning again.",
-  "quit_app": "Quit ${app}",
-  "toggle_developer_tools": "Toggle developer tools",
-  "actions": "Actions",
-  "running_latest_version": "You are running the latest version of ${app}.",
-  "user_locale": "User Interface Language",
-  "changing_locale_effects": "Changing the language of the user interface will affect the language found in menus, dialogs, and project setup.",
-  "changing_locale_note": "Note: To change the language of the checks and translation helps within a tool, please select a different Gateway Language when selecting a tool.",
-  "user_feedback_comments": "Feedback and Comments.",
-  "user_feedback": "User Feedback",
-  "feedback_success": "Thank you for your feedback!",
-  "general_feedback": "General Feedback",
-  "feedback_error": "Unable to submit your feedback. Try again later.",
-  "content_resources_feedback": " Content and Resources Feedback",
-  "bug_report": "Bug Report",
-  "leave_feedback": "Leave us your feedback!",
-  "email_address_optional": "Email address (optional):",
-  "invalid_email": "Invalid email address",
-  "include_app_logs": "Include application logs",
-  "alignment_prompt": "Would you like to export the alignment data with your text?",
-  "include_alignment_check": "Include alignment data",
-  "loading_verse_edits": "Loading Verse Edits",
-  "find_out_more": "Find out more about ${app} at:",
-  "based_on_earlier_work": "Based on an earlier work by ${wycliffe_associates} released under the ISC",
-  "third_party_attributions": "Third Party Code Additional Copyright Notices and License Terms",
-  "sending_feedback": "Sending Feedback",
-  "sending_feedback_failed": "Failed to Send Feedback",
-  "critical_error_warning": "Warning: A critical error has occurred!",
+  "get_started": "શરૂઆત કરો!",
+  "version": "સંસ્કરણ${version}",
+  "instructions": "સૂચનો",
+  "access_internet": "ઇન્ટરનેટનો ઉપયોગ",
+  "to_get_started": "શરૂઆત કરવા માટે, મહેરબાની કરીને:",
+  "log_in": "લૉગ ઇન કરો",
+  "save_changes": "ફેરફારોને સાચવો",
+  "saving_changes": "ફેરફારોને સાચવવામાં આવી રહ્યા છે",
+  "success": "સફળતા",
+  "supported_file_types": "આધારભૂત ફાઇલના પ્રકારો",
+  "select_project": "કોઈએક પ્રોજેક્ટની પસંદગી કરો",
+  "select_tool": "કોઈએક સાધનની પસંદગી કરો",
+  "select_all": "બધું પસંદ કરો",
+  "unselect_all": "બધું નાપસંદ કરો",
+  "launch": "શરૂ કરવું",
+  "current_user": "વર્તમાન વપરાશકર્તા",
+  "please_log_in": "જારી રાખવા માટે લૉગ ઈન કરો",
+  "login_required": "${app} નો વપરાશ કરવા માટે તમારે લૉગ ઇન થવું જ પડશે.",
+  "only_english": "હાલમાં માત્ર અંગ્રેજી જ સમર્થન આપી રહ્યું છે",
+  "change_locale": "સ્થાન બદલો",
+  "app_language": "અરજીની ભાષા",
+  "current_project": "વર્તમાન પ્રોજેક્ટ",
+  "change_project": "પ્રોજેક્ટને બદલો",
+  "current_tool": "વર્તમાન સાધન",
+  "change_tool": "સાધનને બદલો",
+  "currently_logged_in": "હાલમાં તમે લૉગ ઇન છો.",
+  "to_continue_to_projects": "પ્રોજેક્ટને જારી રાખવા માટે, \"પ્રોજેક્ટ જારી રાખો\" પર ક્લિક કરો.",
+  "home": "મુખ્યપૃષ્ઠ",
+  "required": "જરૂરી",
+  "required_field": "આ માહિતી જરૂરી છે",
+  "license": "લાયસન્સ",
+  "licenses": "લાઇસેંસ",
+  "user": "વપરાશકર્તા",
+  "project": "પ્રોજેક્ટ",
+  "tool": "સાધન",
+  "error": "ભૂલ",
+  "copyright": "કોપીરાઇટ",
+  "copyright_check": "કૉપિરાઇટની તપાસ કરો",
+  "project_information": "પ્રોજેક્ટની માહિતી",
+  "missing_verses": "અનુપસ્થિત કલમો",
+  "dev_mode_disabled": "વિકાસકર્તાનો પ્રકાર અક્ષમ કરવામાં આવેલ છે",
+  "dev_mode_enabled": "વિકાસકર્તાનો પ્રકાર સક્રિય કરેલ છે. વિકાસકર્તાના પ્રકારમાં ${app} માટે કોઈ તકનિકી આધાર પૂરો પાડવામાં આવેલ નથી!",
+  "no_internet": "સર્વર સાથે જોડાવા માટે અક્ષમ. કૃપા કરીને તમારા ઇન્ટરનેટ કનેક્શનને તપાસો.",
+  "alert": "સાવધાન",
+  "using_internet": "તમે ઇન્ટરનેટ પર માહિતી પ્રસારિત કરવાના છો. શું તમે ખરેખર એમ કરવા માંગો છો?",
+  "do_not_show_again": "આ ચેતવણી ફરીથી બતાવશો નહીં.",
+  "quit_app": "${app} થી બહાર નીકળો",
+  "toggle_developer_tools": "વિકાસકર્તા સાધનોને ટૉગલ કરો",
+  "actions": "ક્રિયાઓ",
+  "running_latest_version": "તમે ${app} નું અધ્યતન સંસ્કરણ ચલાવી રહ્યા છો.",
+  "user_locale": "વપરાશકર્તાની ઈન્ટરફેસ ભાષા",
+  "changing_locale_effects": "વપરાશકર્તાની ઇન્ટરફેસ ભાષા બદલવી એ મેનુ, ડાયલોગ અને પ્રોજેક્ટ સેટઅપમાં આપેલ ભાષાને અસર કરશે.",
+  "changing_locale_note": "નોંધ: ચેકની ભાષા બદલવા માટે અને સાધનની અંદર જ મદદ મેળવવા માટે, કૃપા કરીને સાધન કરતી વખતે જુદી ગેટવે ભાષા પસંદ કરો.",
+  "user_feedback_comments": "પ્રતિભાવ અને ટિપ્પણીઓ.",
+  "user_feedback": "વપરાશકર્તા પ્રતિસાદ",
+  "feedback_success": "તમારા પ્રતિસાદ બદલ આભાર!",
+  "general_feedback": "સામાન્ય પ્રતિસાદ",
+  "feedback_error": "તમારો પ્રતિસાદ મેળવવા અસમર્થ. ફરી પ્રયાસ કરો.",
+  "content_resources_feedback": " વિષયાર્થ અને સંસાધનોનો પ્રતિસાદ",
+  "bug_report": "ત્રુટિ પત્રક",
+  "leave_feedback": "અમને તમારો પ્રતિસાદ આપો!",
+  "email_address_optional": "ઇમેઇલ એડ્રેસ (વૈકલ્પિક):",
+  "invalid_email": "અમાન્ય ઈમેલ એડ્રેસ",
+  "include_app_logs": "એપ્લિકેશન લોગનો સમાવેશ કરો",
+  "alignment_prompt": "શું તમે ગોઠવણીની માહિતીને તમારા લખાણ સાથે નિકાસ કરવા માગો છો?",
+  "include_alignment_check": "ગોઠવણી માહિતીનો સમાવેશ કરો",
+  "loading_verse_edits": "કલમનો ઉમેરો કરવાનું લોડ કરી રહ્યું છે",
+  "find_out_more": "${app} ની વધુ માહિતી માટે અહીં શોધો:",
+  "based_on_earlier_work": "ISC હેઠળ ${wycliffe_associates} દ્વારા પ્રકાશિત થયેલ અગાઉના કામ આધારિત",
+  "third_party_attributions": "તૃતીય પક્ષ કોડ વધારાની કૉપિરાઇટ નોટિસ અને લાઇસન્સના અધિનિયમો",
+  "sending_feedback": "પ્રતિસાદ મોકલી રહ્યું છે",
+  "sending_feedback_failed": "પ્રતિસાદ મોકલવામાં નિષ્ફળ ગયું",
+  "critical_error_warning": "ચેતવણી: એક મહત્વપૂર્ણ ભૂલ આવી છે!",
   "updates": {
-    "check_for_newer_app": "Check for software updates",
-    "check_for_content_updates": "Check for content updates",
-    "update_gateway_language_content": "Update Gateway Language Content",
-    "checking_for_source_content_updates": "Checking for source content updates...",
-    "failed_checking_for_source_content_updates": "Unable to finish checking for source content updates.",
-    "downloading_source_content_updates": "Downloading source content updates...",
-    "source_content_updates_successful_download": "Source content updates downloaded successfully!",
-    "source_content_updates_unsuccessful_download": "Failed to download source content updates.",
-    "source_content_up_to_date": "All source content is up to date.",
+    "check_for_newer_app": "સોફ્ટવેર અપડેટ માટે ચકાસો",
+    "check_for_content_updates": "વિષયાર્થના અપડેટ માટે ચકાસો",
+    "update_gateway_language_content": "ગેટવે ભાષાના વિષયાર્થને અપડેટ કરો",
+    "checking_for_source_content_updates": "સ્ત્રોત વિષયાર્થ અપડેટ માટે ચકાસી રહ્યું છે...",
+    "failed_checking_for_source_content_updates": "સ્ત્રોત વિષયાર્થ અપડેટની ચકાસણી પૂર્ણ કરવા અક્ષમ.",
+    "downloading_source_content_updates": "સ્ત્રોત વિષયાર્થ અપડેટને ડાઉનલોડ કરી રહ્યું છે...",
+    "source_content_updates_successful_download": "સ્ત્રોત વિષયાર્થ અપડેટ સફળતાપૂર્વક ડાઉનલોડ થઈ ગયું છે!",
+    "source_content_updates_unsuccessful_download": "સ્ત્રોત વિષયાર્થ અપડેટને ડાઉનલોડ કરવામાં નિષ્ફળ.",
+    "source_content_up_to_date": "સમગ્ર સ્ત્રોત વિષયાર્થ આધુનિક બની ગયું છે.",
     "select_the_gateway_language_content_to_download": "Select the Gateway Language content you would like to download and update.",
     "unable_to_check": "Unable to check for updates",
     "update_available": "There is a new version of ${app}.<br/>You are running version ${old_version}. Version ${new_version} is now available.",
@@ -103,58 +103,58 @@
     "no_d43_account": "If you do not have a ${door43} account, you may create one.",
     "may_create_d43_account": "If you do not want to create an account at this time, you may continue as a guest.",
     "d43_information": "${door43} Information",
-    "d43_info_1": "${door43} is a free, online, revision-controlled content management system for open-licensed biblical material.<br/> It provides free, remote storage and collaboration services for creators and translators of biblical content.",
-    "username_error": "Incorrect Username",
-    "password_error": "Incorrect Password",
-    "guest_information": "Guest Information",
-    "may_be_guest": "You can choose to be a Guest and keep your identity anonymous.",
-    "coming_soon": "Coming Soon...",
-    "not_create_d43_account": "${app} does not currently support creating a ${door43} account. ",
-    "may_create_d43": "You may create an account online at ",
-    "continue_as_guest": "Continue as Guest",
-    "username": "Username",
-    "password": "Password",
-    "new_guest": "New Guest",
-    "visible": "This is publicly visible",
-    "read_and_agree": "I have read and agree to the terms and conditions.",
-    "attention": "Attention",
-    "known_as_username": "You have chosen to be known as <strong>${username}</strong>. This username will be publicly viewable.",
-    "known_not_comfortable": "If you are not comfortable with being known as <strong>${username}</strong>, you may <strong>Cancel</strong> and enter a new name.",
-    "logged_in_as": "You are logged in as: <strong>${username}</strong>.",
-    "how_to_proceed": "How would you like to proceed?",
-    "login_error": "An error occurred while attempting to log in.",
-    "session_invalid": "Your login has become invalid. Please log out and log back in.",
-    "terms_and_conditions": "Terms and Conditions",
-    "by_continuing": "By continuing, you affirm that you have read and understand the terms and conditions and agree to: ",
-    "not_infringe": "Only add content that does not infringe on someone else's copyright.",
-    "not_conflict": "Only add content that does not conflict with the Statement of Faith.",
-    "statement_of_faith": "Statement of Faith.",
-    "release_contributions": "Release your contributions to the content under a Creative Commons Attribution-ShareAlike 4.0 International License.",
-    "cc_by_sa": "Creative Commons Attribution-ShareAlike 4.0 International License."
+    "d43_info_1": "${door43} એ બાઈબલ આધારિત સામગ્રી માટે ઓપન લાઇસન્સવાળી એક મફત, ઓનલાઈન, સંશોધન- નિયંત્રિત વિષયાર્થવાળી વ્યવસ્થાપનની પદ્ધતિ છે. <br/> એ સર્જકો અને બાઇબલના વિષયાર્થના અનુવાદકો માટે મફત, દૂરસ્થ સંગ્રહ અને સહયોગ સેવાઓનું પ્રદાન કરે છે.",
+    "username_error": "ખોટું વપરાશકર્તા નામ",
+    "password_error": "ખોટો પાસવર્ડ",
+    "guest_information": "અતિથિ માટે માહિતી",
+    "may_be_guest": "તમે એક અતિથિ બની રહેવાનુ અને તમારી ઓળખ અનામી રાખવાનું પસંદ કરી શકો છો.",
+    "coming_soon": "જલ્દીથી આવી રહ્યું છે...",
+    "not_create_d43_account": "${app} હાલમાં ${door43} એકાઉન્ટ બનાવવા માટે સમર્થન કરી રહ્યું નથી. ",
+    "may_create_d43": "તમે ઓનલાઇન પર એક એકાઉન્ટ બનાવી શકો છો ",
+    "continue_as_guest": "અતિથિ તરીકે જારી રાખો",
+    "username": "વપરાશકર્તાનું નામ",
+    "password": "પાસવર્ડ",
+    "new_guest": "નવા અતિથિ",
+    "visible": "આ સાર્વજનિક રીતે દ્રશ્યમાન છે",
+    "read_and_agree": "આ નિયમો અને શરતોને મેં વાંચ્યા છે અને હું તેનાથી સહમત છું.",
+    "attention": "ધ્યાન રાખો",
+    "known_as_username": "તમે <strong>${username}</strong> તરીકે ઓળખાવાનું પસંદ કર્યું છે. આ વપરાશકર્તા નામ સાર્વજનિક રીતે દ્રશ્યમાન રહેશે.",
+    "known_not_comfortable": "જો તમે <strong>${username}</strong> ઓળખાવાથી અનુકૂળ નથી, તો તમે <strong>રદ</strong> કરીને નવું નામ દાખલ કરી શકશો.",
+    "logged_in_as": "તમે આ પ્રમાણે લૉગ ઇન થયા છો: <strong>${username}</strong>.",
+    "how_to_proceed": "તમે કેવી રીતે આગળ વધવા માગો છો?",
+    "login_error": "લૉગ ઇન કરવાના પ્રયાસ કરતી વખતે ભૂલ થઈ છે.",
+    "session_invalid": "તમારું લૉગિન અમાન્ય થઈ ગયું છે. કૃપા કરીને લૉગ આઉટ થઈને ફરીથી લૉગ ઇન કરશો.",
+    "terms_and_conditions": "નિયમો અને શરતો",
+    "by_continuing": "જારી રાખતા, તમે સમર્થન કરો છો કે તમે નિયમો અને શરતોને વાંચ્યા તથા સમજ્યા છે અને તમે તેથી સહમત છો: ",
+    "not_infringe": "માત્ર એવી સામગ્રી ઉમેરો જે કોઈના કૉપિરાઇટનું ઉલ્લંઘન કરતી ન હોય.",
+    "not_conflict": "માત્ર એવી સામગ્રી ઉમેરો જે વિશ્વાસના નિવેદનનો વિરોધ કરતી ન હોય.",
+    "statement_of_faith": "વિશ્વાસનું નિવેદન.",
+    "release_contributions": "4.0 આંતરરાષ્ટ્રીય લાયસન્સ હેઠળની સામગ્રી માટે તમારા યોગદાનને જારી રાખો.",
+    "cc_by_sa": "ક્રિએટિવ કોમન્સ એટ્રિબ્યુશન-ShareAlike 4.0 આંતરરાષ્ટ્રીય લાયસન્સ."
   },
   "projects": {
-    "zip_files": "Zip Files",
-    "error_setting_up_project": "Oops! We have encountered a problem setting up your project to be loaded. Please contact Help Desk (${email}) for assistance.",
-    "error_loading": "Oops! We have encountered a problem loading your project. Please contact Help Desk (${email}) for assistance.",
-    "no_project": "No project was selected",
-    "import_from_d43": "Import from ${door43}",
-    "select_project_from_list": "Select a project from the list.",
-    "to_import_project": "To import a project, click",
-    "to_export_project": "To upload or export a project or edit the project details click",
-    "supported_projects": "USFM projects and ${tstudio} projects (saved in version 11 or greater) are supported.",
-    "projects": "Projects",
-    "no_projects_found": "No projects have been found. Follow instructions at left to import a project.",
-    "seconds_ago": "A few seconds ago",
-    "minutes_ago": "minutes ago",
-    "hours_ago": "hours ago",
-    "save_as": "Save As",
-    "never_opened": "Never Opened",
-    "export_wordalignment": "Export Word Alignments",
-    "export_usfm": "Export to USFM",
-    "export_csv": "Export to CSV",
-    "upload_to_d43": "Upload to ${door43}",
-    "edit_project_details": "Edit Project Details",
-    "import_local_project": "Import Local Project",
+    "zip_files": "ઝિપ ફાઇલો",
+    "error_setting_up_project": "અરે! તમારા પ્રોજેક્ટને લોડ કરતી વખતે અમે એક સમસ્યાનો સામનો કર્યો છે. કૃપા કરીને મદદ માટે સહાયતા કેન્દ્ર (${email}) નો સંપર્ક કરો.",
+    "error_loading": "અરે! તમારા પ્રોજેક્ટને લોડ કરતી વખતે અમે એક સમસ્યાનો સામનો કર્યો છે. કૃપા કરીને મદદ માટે સહાયતા કેન્દ્ર (${email}) નો સંપર્ક કરો.",
+    "no_project": "કોઈપણ પ્રોજેક્ટ પસંદ કરવામાં આવ્યો ન હતો",
+    "import_from_d43": "${door43} પરથી આયાત કરો",
+    "select_project_from_list": "યાદીમાંથી કોઈએક પ્રોજેક્ટ પસંદ કરો.",
+    "to_import_project": "કોઈ પ્રોજેકટને આયાત કરવા માટે, ક્લિક કરો",
+    "to_export_project": "કોઈ પ્રોજેકટને અપલોડ કે નિકાસ કે પ્રોજેકટની માહિતીમાં ઉમેરો કરવા માટે, ક્લિક કરો",
+    "supported_projects": "USFM પ્રોજેક્ટ અને ${tstudio} પ્રોજેક્ટ (11 થી વધારે સંસ્કરણોમાં સાચવવામાં આવેલ છે) આધારભૂત છે.",
+    "projects": "પ્રોજેક્ટસ",
+    "no_projects_found": "કોઈ પ્રોજેક્ટ મળેલ નથી. પ્રોજેકટને આયાત કરવા માટે ડાબી બાજુએ આપેલ સૂચનોને અનુસરો.",
+    "seconds_ago": "થોડી સેકંડ પહેલા",
+    "minutes_ago": "થોડી મિનિટ પહેલા",
+    "hours_ago": "કલાકો પહેલા",
+    "save_as": "તરીકે સાચવો",
+    "never_opened": "ક્યારેય ખોલેલ નથી",
+    "export_wordalignment": "શબ્દોની ગોઠવણીની નિકાસ કરો",
+    "export_usfm": "USFM ને નિકાસ કરો",
+    "export_csv": "CSV ને નિકાસ કરો",
+    "upload_to_d43": "${door43} પર અપલોડ કરો",
+    "edit_project_details": "પ્રોજેકટ વિગતોમાં ઉમેરો કરો",
+    "import_local_project": "સ્થાનિક પ્રોજેક્ટની આયાત કરો",
     "import_online_project": "Import Online Project",
     "searching_alert": "Searching, please wait...",
     "books_available": "In this version of ${app}, the translationWords tool supports projects from the New Testament and the Word Alignment tool supports projects from the whole Bible.",
