--- a/src/locale/Hindi-hi_IN.json
+++ b/src/locale/Hindi-hi_IN.json
@@ -175,6 +175,7 @@
     "exported_alert": "${project_name} सफलतापूर्वक ${file_path} में निर्यात किया गया है",
     "must_be_logged_in_alert": "परियोजनाओं को अपलोड करने के लिए आपको ${door43} खाते के साथ लॉग इन करना होगा। ${door43} उपयोगकर्ता खाते के साथ लॉग आउट करें और फिर वापस लें",
     "uploading_alert": "${project_name} को ${door43}पर अपलोड कर रहा है कृपया प्रतीक्षा करें...",
+    "renaming_alert": "नाम बदलने ${project_name} पर ${door43}. कृपया प्रतीक्षा करें...",
     "upload_successful_alert": "${username}, आपकी परियोजना को सफलतापूर्वक अपलोड किया गया था",
     "upload_modified_error": "${project_name} अपलोड नहीं किया जा सकता क्योंकि आपके ${door43} खाते पर उस प्रोजेक्ट के अनुवाद में परिवर्तन हुए हैं",
     "merge_export_error": "इस परियोजना में मर्ज टकराव है और निर्यात नहीं किया जा सकता है। मर्ज ट्रिबल्स को हल करने के लिए प्रोजेक्ट का चयन करें, फिर पुन: प्रयास करें।",
@@ -211,7 +212,9 @@
     "dcs_rename_project": "आपके प्रोजेक्ट का नाम बदल दिया गया है<br/><b>${project}</b><br/>आप इस प्रोजेक्ट के मौजूदा ${door43} भंडार के साथ क्या करना चाहेंगे?",
     "dcs_rename_success": "प्रोजेक्ट के लिए ${door43} रिपोजिटरी सफलतापूर्वक अपडेट किया गया था।<br/>${project}",
     "dcs_rename_failed": "${door43} रिपोजिटरी का नाम बदल नहीं लिया गया था।<br/><br/>क्या आप ${door43} रिपोजिटरी का नाम बदलना चाहते हैं या नाम बदलने के बिना जारी रखना चाहते हैं?",
-    "dcs_rename_conflict": "नाम बदलें विफल रहा क्योंकि इस नाम के साथ एक रिपोजिटरी पहले से मौजूद है।<br/><br/>अपने प्रोजेक्ट को ${door43} पर अपलोड करने में सक्षम होने के लिए, आपको या तो अपनी स्थानीय प्रोजेक्ट का नाम बदलने या अपने ${door43} प्रोजेक्ट का नाम बदलने की आवश्यकता है।"
+    "dcs_create_new_failed": "के ${door43} भंडार नहीं बनाया जा सका.<br/><br/>क्या आप चाहते हैं करने के लिए पुन: प्रयास करें बनाने के ${door43} भंडार या जारी रखने के बिना नाम बदलना?",
+    "dcs_rename_conflict": "नाम बदलें विफल रहा क्योंकि इस नाम के साथ एक रिपोजिटरी पहले से मौजूद है।<br/><br/>अपने प्रोजेक्ट को ${door43} पर अपलोड करने में सक्षम होने के लिए, आपको या तो अपनी स्थानीय प्रोजेक्ट का नाम बदलने या अपने ${door43} प्रोजेक्ट का नाम बदलने की आवश्यकता है।",
+    "dcs_create_new_conflict": "बनाने के लिए नए भंडार में विफल रहा है क्योंकि एक रिपोजिटरी इस नाम के साथ पहले से ही मौजूद है ।<br/><br/>करने के लिए सक्षम होना करने के लिए अपलोड करने के लिए अपनी परियोजना ${door43}, आप की जरूरत करने के लिए का नाम बदलें या तो अपने स्थानीय परियोजना का नाम बदलें या अपने ${door43} परियोजना है ।"
   },
   "project_validation": {
     "language_mismatch": "कोड के लिए भाषा का नाम मान्य नहीं है",
